<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.PatientRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_doctor1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/patient_registration"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp"

            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/full_name"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationIdNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawablePadding="10dp"
                android:hint="@string/id"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/phone_number"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/design_default_color_primary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/availabilitySpinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/timeframes"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/specialisationSpinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/specialisation"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/register_now"
            android:layout_margin="18dp"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/regPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/have_an_account_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#5C6BC0"
            android:textSize="17sp" />


    </LinearLayout>

</ScrollView>