<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE9E7"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Recovery"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:textColor="#FF000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Recovery" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="399dp"
        android:layout_height="473dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Health_Sector"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="#877028"
            android:backgroundTint="#FFAB00"
            android:gravity="center"
            android:text="@string/health_sector"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Education"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="#491A1A"
            android:backgroundTint="#FFAB00"
            android:text="@string/eduflow" />

        <Button
            android:id="@+id/Finance"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="#BA5050"
            android:backgroundTint="#FFAB00"
            android:text="@string/fintech_space" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/Recovery"
        app:srcCompat="@drawable/ic_r"
        tools:layout_editor_absoluteX="118dp" />

</androidx.constraintlayout.widget.ConstraintLayout>